[tool.poetry]
name = "choizy-app"
version = "0.1.0"
description = "TelegramBot + WebApp"
authors = ["Evgeny Sapozhkov <evgeny.sapozhkov@intexsoft.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.12.0"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
